fix: login alignment

--- a/src/pages/login/style.css
+++ b/src/pages/login/style.css
@@ -33,7 +33,7 @@
   margin-top: 150px;
 }
 
-.form-container {
+.form-container-1 {
   padding: 1rem;
   display: flex;
   justify-content: center;
